# udm-server

./: .env.example  .gitignore  git.sh  manage.py  notes.txt  package.json  pyproject.toml  requirements.txt
core/: schema.py  urls.py
core/settings/: base.py
misc/: class-component.js  json-file.js  server.js
misc/articles/: article-1.md
misc/node/: external-api.js  parse-json.js
server/: asgi.py  schema.py  wsgi.py
server-apollo/: .dockerignore  .env.template  .eslintrc.js  .gitignore  .gqlconfig  Dockerfile  README.md  apollo.config.js  backup.sql  docker-compose.yml  dump.rdb  env.d.ts  git.sh  jsconfig.json  package.json  pnpm-lock.yaml  startDev.sh  tasks.md  tsconfig.json
server-apollo/MyProject/: package-lock.json  package.json
server-apollo/scripts/: mergeSchemas.cjs  startDev.sh  startDocker.sh
server-apollo/src/: dummyData.ts  index.example.ts  index.ts  server.ts
server-django/: .env.example  README.md  manage.py  requirements.txt
server-django/server/: asgi.py  schema.py  wsgi.py
server-django/tracks/: models.py  schema.py
server-nest/: .eslintrc.js  .gitignore  .prettierrc  package.json  pnpm-lock.yaml  prisma.txt  tsconfig.json
server-nest/src/: main.ts  (+4 more)
server-node/: .env.template  docker.sh  package.json
server-rust/: .dockerignore  Cargo.toml  Dockerfile
server-rust/src/: main.rs
server-tgql/: .dockerignore  .eslint.js  .eslintrc.js  .prettierrc.js  Dockerfile  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  udm-db-node.sh
tracks/: models.py
users/: admin.py  managers.py  managers.py.old  schema.py  types.py
(+87 files in other folders)
